[package]
name = "computour"
version = "0.1.0"
authors = ["Nicholas Montano <montanonic@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "1.5.0"
libc = "0.2.85"
num-bigint = "0.3.1"
once_cell = "1.5.2"
strum = "0.20.0"
strum_macros = "0.20.1"
termion = "1.5.6"
pest = "2.1.3"
pest_derive = "2.1.0"
rune = "0.8.0"
runestick = "0.8.0"
boolinator = "2.4.0"

[dependencies.bril-rs]
version = "0.1.0"
path = "bril/bril-rs"
features = ["ssa", "memory", "float", "speculate"]
